# Solution-Challenge-Hackathon

./: .gitignore  Readme.md  docker-compose.yml  render.yaml  requirements.txt
backend/: .env.example  Dockerfile  fleet.json  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: contract_agent.py  decision_agent.py  disruption_agent.py  feedback_agent.py  graph.py  routing_agent.py  shipment_agent.py  state.py
backend/app/api/routes/: disruptions.py  ml_api.py  routing.py  shipments.py  traffic_api.py  websocket.py
backend/app/core/: circuit_breaker.py  firestore.py  pubsub.py
backend/app/ml/: delay_predictor.py  disruption_classifier.py  feature_engineering.py
backend/app/models/: contract.py  disruption.py  route.py  shipment.py
backend/app/services/: notification_service.py  shipment_service.py
backend/tests/test_agents/: test_decision_agent.py
backend/tests/test_ml/: test_classifier.py  test_delay_predictor.py
ml/: anomaly_detector.py  data_downloader.py  download_lade.py  eta_predictor.py  evaluate.py  explainability.py  imd_scraper.py  live_weather.py  multimodal_optimizer.py  railway_parser.py  tomtom_traffic.py  train.py  train_dataco.py  weather_parser.py  whatif_simulator.py
ml/eda_outputs/: dataset_stats.txt
ml/notebooks/: 01_eda.py  02_feature_engineering.py  03_model_training.py  04_lade_eta_analysis.py
models/: anomaly_detector.joblib  dataco_delay_predictor.joblib  delay_predictor_v2.joblib  eta_predictor_v1.joblib  eta_predictor_v2.joblib
streamlit_app/: Home.py
streamlit_app/pages/: 0_Smart_Alerts.py  (+7 more)
