[tool.poetry]
name = "self-healing-supply-chain"
version = "0.1.0"
description = "AI multi-agent supply chain optimization backend"
authors = ["Team Self-Healing"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
google-cloud-firestore = "^2.19.0"
google-cloud-pubsub = "^2.26.0"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-google-genai = "^2.0.0"
google-cloud-aiplatform = "^1.66.0" # Vertex AI
xgboost = "^2.1.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.0"
pytz = "^2024.1"
tenacity = "^9.0.0"
websockets = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
